src/tests/function-declarations/12.txt
function-declarations/12.c:6:1: error: redefinition of function 'main'
 int main(void) {
 ^
